# VeritasWindowing

./: .gitmodules  CMakeLists.txt  README.md
include/Veritas/Windowing/: View.h  Window.h  WindowService.h  Windowing.h
src/: View.WINAPI.cpp  View.X11.cpp  View.X11.h  View.cpp  Window.WINAPI.cpp  Window.WINAPI.hpp  Window.X11.cpp  Window.X11.h  Window.cpp  WindowService.cpp
